[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plecost"
version = "4.0.0"
description = "The best black-box WordPress security scanner"
readme = "README.md"
license = "FSL-1.1-MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "aiofiles>=23",
    "packaging>=24",
]

[project.optional-dependencies]
fast = ["uvloop>=0.19"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "hypothesis>=6",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
plecost = "plecost.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "functional: Tests funcionales que requieren WordPress real (docker)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
