[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plecost"
version = "4.2.4"
description = "The best black-box WordPress security scanner"
readme = "README.md"
license = {text = "PolyForm-Noncommercial-1.0.0"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "packaging>=24",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
fast = ["uvloop>=0.19"]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "hypothesis>=6",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "asyncpg>=0.29",
]

[project.scripts]
plecost = "plecost.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "functional: Tests funcionales que requieren WordPress real (docker)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
