[metadata]
name = dnsrecon
description = Installable version of dnsrecon: DNS Enumeration Script
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: OSI Approved :: GNU General Public License v2 (GPLv2)
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
author = Carlos Perez
author_email = carlos_perez@darkoperator.com
maintainer = cr0hn (maintainer)
maintainer_email = cr0hn@cr0hn.com
url = http://github.com/cr0hn/dnsrecon

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    dnsrecon = dnsrecon.__main__:main

[flake8]
ignore = E501, F405, F403, E402
